Corrigindo páginas com títulos errado

--- a/Projeto Anna-Bella/contato.html
+++ b/Projeto Anna-Bella/contato.html
@@ -24,7 +24,7 @@
 
         <div id="conteudo">
 
-            <h1>Campanhas Publicitárias</h1>
+            <h1>Contato</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias corporis reprehenderit non, rerum in eaque consequuntur sunt quam ipsum debitis aliquid laudantium id nihil similique quas odio? Architecto, quaerat laudantium? Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias assumenda, tempora ullam consequuntur tenetur magni possimus animi, enim rem soluta temporibus aperiam asperiores? Adipisci sapiente sint ratione incidunt suscipit quas.
             </p>
